[package]
name = "space_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy-inspector-egui = "0.31"
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy_renet = { git = "https://github.com/lucaspoffo/renet", branch = "master", features = ["steam"] }
#lightyear = "0.19.1"
serde = "1.0.219"
bincode = "1.3.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
